--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <img src="Images/11.avif" alt="Shaking Hands" class="handshake">
 
         <!-- Contact Numbers -->
-        <!-- <p class="contact-number">+91 9848904347</p> -->
+        <p class="contact-number">Vinay</p>
         <p class="contact-number">+91 8008330598</p>
     </div>
 </body>
