--- a/events.html
+++ b/events.html
@@ -164,23 +164,23 @@
   
         <img src="Images/haldi.png" alt="haldi" class="haldi">
 
-        <h3 class="name1">Muhurtham</h3>
+<!--         <h3 class="name1">Muhurtham</h3> -->
         <p class="sub-text">Monday, 10th March 2025 <br> at 7:00 AM</p><hr>
 
         <h2 class="invite-title">Mehandi & Sangeeth</h2>
         <img src="Images/mehandi.png" alt="Mehandhi" class="ganesha">
 
-        <h3 class="name1">Muhurtham</h3>
+<!--         <h3 class="name1">Muhurtham</h3> -->
         <p class="sub-text">Monday, 10th March 2025 <br> at 5:30 PM</p><hr>
 
         <h2 class="invite-title">Making a Bride</h2>
         <img src="Images/Bride.png" alt="Bride" class="ganesha">
 
-        <h3 class="name1">Muhurtham</h3>
-        <p class="sub-text">Wednesday, 12th March 2025 <br> at 5:00 AM</p><hr>
+<!--         <h3 class="name1">Muhurtham</h3> -->
+        <p class="sub-text">Wednesday, 12th March 2025 <br> at 6:46 AM</p><hr>
 
         <h3 class="name2">Venue</h3>
-        <p class="sub-text">Near our house,<br>Kommara Village, ZPHS road <br>Attili Mandal.</p>
+        <p class="sub-text">Near our house,<br>Kommara Village, High School road</p>
     </div>
 </body>
 </html>
