--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="Images/A.png">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <meta property="og:image" content="https://png.pngtree.com/png-clipart/20231010/original/pngtree-indian-wedding-couple-sitting-on-floral-swing-illustration-png-image_13294031.png"> 
+    <meta property="og:image" content="https://media.istockphoto.com/id/1186214696/photo/hindu-wedding-ritual-wherein-bride-and-groom-hand.jpg?s=612x612&w=0&k=20&c=fTlNejRdY7dkvk742auNgI3j6Ve9UqqWSnb3QJ-D2gw="> 
     <meta property="og:image:width" content="128">
     <meta property="og:image:height" content="128">
 </head>
