--- a/maps.html
+++ b/maps.html
@@ -119,8 +119,8 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <img src="Images/2.avif" alt="Wedding Image"><br><br>
+    <div class="container"><br/><br/>
+        <img src="Images/2.avif" alt="Wedding Image"><br/><br/>
         <button onclick="location.href='https://maps.app.goo.gl/F9UMkEmASCztwszu6'">Home</button>
         <button onclick="location.href='https://maps.app.goo.gl/sH7z4Uz955ZLG67f8'">Wedding</button>
     </div>
